<resources>
    <string name="app_name">IChat</string>
    <string name="todo">TODO</string>
    <string name="by_hua">By HUA</string>
    <string name="welcome_to_ichat">Welcome To IChat</string>
    <string name="create_your_account">CREATE YOUR ACCOUNT</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_your_account">Login Your Account</string>
    <string name="want_to_create_an_account">Want to create an Account?</string>
    <string name="login">login</string>
    <string name="ichat_is_a_social_chatting_platform_where_you_can_and_chat_freely_and_securely_this_is_the_best_chatting_application_with_high_security_security">IChat is a social chatting platform. Where you can and chat freely and securely. This is the Best chatting application with high security.</string>
    <string name="read_term_and_conditions">Read Term and Conditions…</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="last_message">last message</string>
    <string name="type_a_message">Type a message…</string>
    <string name="message">message</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="profile">Profile</string>
    <string name="xyzgmail_com">xyzgmail.com</string>
    <string name="edit_profile">edit profile</string>
    <string name="hey_i_am_using_ichat">Hey, I am using IChat.</string>
    <string name="about">About</string>
    <string name="education">Education</string>
    <string name="graduation">Graduation</string>
    <string name="address">Address</string>
    <string name="add_your_address">Add your address</string>
    <string name="current_set_to">current set to</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="offline">offline</string>
    <string name="search_users">search users</string>
    <string name="call">call</string>
    <string name="video">video</string>
    <string name="ichat">IChat</string>
    <string name="welcome_to_ichat_ichat_is_the_social_chatting_application_that_is_used_to_chatting_with_each_other">Welcome to IChat, IChat is the social chatting application that is used to chatting with each other.</string>
    <string name="create_account_1">Create Account</string>
    <string name="name">Name</string>
    <string name="please_signup_to_continue">please signup to continue…</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="default_web_client_id">1012085262583-htioavchpc4sm5bcnhj1is0iki6n7cug.apps.googleusercontent.com</string>
    <string name="fill_detail">fill all the details</string>
    <string name="google_sign_failed">failed google sing in</string>
    <string name="User">User</string>
    <string name="Chats">Chats</string>
    <string name="login_account">Login Account</string>
    <string name="please_login_to_continue">please login to continue…</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="himanshu_singh_bhamaniya">Himanshu Singh Bhamaniya</string>
    <string name="uttar_pardesh">Uttar Pardesh</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="filePath">file:android_asset/call.html</string>
    <string name="add_a_caption">Add a caption...</string>
</resources>