<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.IChatSignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/sigiup_bg"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/sign_back_bg"
        android:orientation="vertical"
        android:layout_margin="35dp"
        android:paddingTop="15dp"
        android:paddingBottom="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_ichat"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/chat"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ichat_is_a_social_chatting_platform_where_you_can_and_chat_freely_and_securely_this_is_the_best_chatting_application_with_high_security_security"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_term_and_conditions"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_back_bg"
            android:textColor="@color/light_blue"
            android:id="@+id/createAccount"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back_bg"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/light_blue"
            android:id="@+id/login"/>

    </LinearLayout>

</LinearLayout>