<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".login.IChatSignUpNewActivity"
android:background="@drawable/wallpaper">

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="5dp"
    android:text="@string/ichat"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="50sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/textView2"
    app:layout_constraintEnd_toEndOf="@+id/textView2"
    app:layout_constraintStart_toStartOf="@+id/textView2" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="30dp"
    android:text="@string/welcome_to_ichat_ichat_is_the_social_chatting_application_that_is_used_to_chatting_with_each_other"
    android:textAlignment="center"
    android:textColor="@color/white"
    app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.72" />
<LinearLayout
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:background="@drawable/sign_up_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="30dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/user3"
        app:civ_border_color="@color/white"
        app:civ_border_width="3dp"
        android:layout_marginVertical="15dp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textColorHint="@color/white1" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textColorHint="@color/white1" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:inputType="textWebPassword"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textColorHint="@color/white1"
        android:drawableEnd="@drawable/close_eye"
        android:drawablePadding="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/signup_btn_bg"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textStyle="bold" />
</LinearLayout>


<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/please_signup_to_continue"
    android:textColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
    app:layout_constraintVertical_bias="0.29000002" />

<LinearLayout
    android:id="@+id/google_signin_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="25dp"
    android:background="@drawable/google_btn_bg"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingHorizontal="30dp"
    android:paddingVertical="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/textView3"
    app:layout_constraintStart_toStartOf="@+id/textView3"
    app:layout_constraintTop_toBottomOf="@+id/textView3"
    app:layout_constraintVertical_bias="0.19999999">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/image_google" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>