<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".login.IChatSignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sigiup_bg"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/sign_back_bg"
            android:orientation="vertical"
            android:layout_margin="35dp"
            android:paddingTop="15dp"
            android:paddingBottom="25dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_ichat"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_your_account"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:padding="15dp"
                android:background="@drawable/edit_bg"
                android:layout_marginTop="45dp"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="5dp"
                android:autofillHints="TODO"
                android:id="@+id/email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:inputType="textWebPassword"
                android:hint="@string/password"
                android:padding="15dp"
                android:background="@drawable/edit_bg"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="5dp"
                android:drawableEnd="@drawable/close_eye"
                android:autofillHints="TODO"
                android:id="@+id/password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:inputType="textWebPassword"
                android:hint="@string/confirm_password"
                android:padding="15dp"
                android:background="@drawable/edit_bg"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/confirm"
                android:drawablePadding="5dp"
                android:drawableEnd="@drawable/close_eye"
                android:autofillHints="TODO"
                android:id="@+id/confirmPassword"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/want_to_create_an_account"
                android:textColor="@color/white"
                android:textAlignment="viewEnd"
                android:layout_marginTop="5dp"
                android:id="@+id/createAccount"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/login"
                android:textColor="@color/light_blue"
                android:background="@drawable/btn_back_bg"
                android:id="@+id/loginBtn"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>