<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Home.Profile.ProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/user_profile"
            app:civ_border_color="@color/light_blue"
            app:civ_border_width="5dp"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="sans-serif"
            android:textFontWeight="500"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:id="@+id/userName"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:text="@string/xyzgmail_com"
            android:textColor="@color/user_block_des"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_btn_bg"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/user_block_des"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/aboutGroup">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/about"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/aboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/hey_i_am_using_ichat"
                    android:textColor="@color/user_block_des"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/educationGroup">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/education"
                tools:ignore="ImageContrastCheck,ImageContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/educationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/graduation"
                    android:textColor="@color/user_block_des"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/addressGroup">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/address"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/addressText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/add_your_address"
                    android:textColor="@color/user_block_des"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>