<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:gravity="end"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/background_right_chat">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:id="@+id/show_message"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00_am"
                    android:textSize="12sp"
                    android:id="@+id/show_time"/>

                <ImageButton
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/double_tick"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/todo"
                    android:id="@+id/double_tick"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>